Fix issue with bg images not visible (behind placeholder) when js is turned off.

--- a/assets/stylesheets/scss/components/_components.bg-image.scss
+++ b/assets/stylesheets/scss/components/_components.bg-image.scss
@@ -30,6 +30,7 @@
 
 		.bg-image__placeholder {
 
+			&,
 			.no-js &,
 			.js &.lazyloaded {
 				opacity: .5;
@@ -71,6 +72,7 @@
 			pointer-events: none;
 		}
 
+		&,
 		.no-js &,
 		.js &.lazyloaded {
 			opacity: .5;
